k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-pipeline-api
  labels:
    app: data-pipeline-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: data-pipeline-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: data-pipeline-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: data-pipeline-api
        image: europe-central2-docker.pkg.dev/gcp-devops-pipeline-kamil/docker-repo/data-pipeline-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: data-pipeline-api
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: data-pipeline-api
