k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 34-116-189-129.nip.io
    secretName: crypto-tracker-tls
  rules:
  - host: 34-116-189-129.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: data-pipeline-api
            port:
              number: 80
